@@ -1515,8 +1515,8 @@ L'implementazione GNU di @command{awk} @`e chiamata @command{gawk}; se
 invocato con le opzioni o con le variabili d'ambiente appropriate,
 (@pxref{Opzioni}), @`e pienamente
 compatibile con le specifiche
-POSIX@footnote{Lo standard POSIX 2008 @`e accessibile in rete all'indirizzo
-@w{@url{https://pubs.opengroup.org/onlinepubs/9699919799/}.}}
+POSIX@footnote{Lo standard POSIX 2018 @`e accessibile in rete all'indirizzo
+@url{https://pubs.opengroup.org/onlinepubs/9699919799/a}.}
 del linguaggio @command{awk}
 e con la versione Unix di @command{awk} mantenuta
 da Brian Kernighan.
@@ -2235,7 +2235,7 @@ titolo @cite{Effective awk Programming}, e O'Reilly ha pubblicato
 la terza edizione nel 2001
 @end ifset
 
-Questa edizione mantiene la struttra di base delle edizioni precedenti.
+Questa edizione mantiene la struttura di base delle edizioni precedenti.
 Per l'edizione FSF 4.0, il contenuto era stato accuratamente rivisto
 e aggiornato.  Tutti i riferimenti a versioni di @command{gawk} anteriori alla
 versione 4.0 sono stati eliminati.
@@ -2243,7 +2243,7 @@ Di particolare interesse in quella edizione era l'aggiunta del @ref{Debugger}.
 
 Per l'edizione FSF
 @ifclear FOR_PRINT
-@value{EDITION},
+5.0,
 @end ifclear
 @ifset FOR_PRINT
 @value{EDITION}
@@ -41170,8 +41170,8 @@ La possibilit@`a di eliminare completamente un vettore con l'istruzione
 @xref{Estensioni comuni} per una lista delle estensioni comuni
 non previste nello standard POSIX.
 
-Lo standard POSIX 2008 @`e reperibile online a:
-@url{http://www.opengroup.org/onlinepubs/9699919799/}.
+Lo standard POSIX 2018 @`e reperibile online a:
+@url{https://pubs.opengroup.org/onlinepubs/9699919799/}.
 
 
 @node BTL
@@ -42573,9 +42573,9 @@ modificato la definizione di intervallo, e che, al di fuori delle
 localizzazioni @code{"C"} e @code{"POSIX"}, il significato di espressione
 di intervallo era ora
 @emph{indefinito}.@footnote{Si veda
-@uref{http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap09.html#tag_09_03_05, lo standard}
+@uref{https://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap09.html#tag_09_03_05, lo standard}
 e
-@uref{http://pubs.opengroup.org/onlinepubs/9699919799/xrat/V4_xbd_chap09.html#tag_21_09_03_05, le motivazioni}.}
+@uref{https://pubs.opengroup.org/onlinepubs/9699919799/xrat/V4_xbd_chap09.html#tag_21_09_03_05, le motivazioni}.}
 
 Adottando questo simpatico termine tecnico, lo standard permette agli
 implementatori di implementare gli intervalli nella maniera che preferiscono.
@@ -45697,7 +45697,7 @@ potente, per creare estensioni.
 @node Futuri sviluppi delle estensioni
 @appendixsubsec Possibilit@`a di sviluppo futuro
 
-L'API pu@`o ancora essere ampliata, in due modi:
+L'API pu@`o ancora essere ampliata, come minimo nei modi seguenti:
 
 @itemize @value{BULLET}
 @item
@@ -45707,15 +45707,10 @@ identificativo a @command{gawk} a ogni chiamata di funzione.  Questo meccanismo
 consente a @command{gawk} di identificare l'estensione che lo chiama, se la
 cosa dovesse risultare necessaria.
 
-@item
-Analogamente, l'estensione passa uno ``spazio-dei-nomi'' a @command{gawk}
-in fase di registrazione di ogni funzione estesa.  Questo @`e fatto in vista di
-un possibile futuro meccanismo per raggruppare funzioni di estensione, e per
-evitare in questo modo possibili conflitti nei nomi di funzione.
 @end itemize
 
 Naturalmente, al momento in cui queste righe sono state scritte, nessuna
-decisione @`e stata presa riguardo ai punti sopra descritti.
+decisione @`e stata presa riguardo a quanto descritto sopra.
 
 @node Sommario delle note
 @appendixsec Sommario
@@ -46859,8 +46854,8 @@ Operativo Portabile (Portable Operating System).  La ``IX'' specifica
 che questi standard sono stati originati dallo Unix.
 Lo standard pi@`u rilevante per gli utenti @command{awk} @`e lo
 @cite{IEEE Standard for Information Technology, Standard 1003.1-2008}.
-Lo standard POSIX 2008 pu@`o essere trovato in rete all'indirizzo:
-@url{http://pubs.opengroup.org/onlinepubs/9699919799/}.
+Lo standard POSIX 2018 pu@`o essere trovato in rete all'indirizzo:
+@w{@url{https://pubs.opengroup.org/onlinepubs/9699919799/}}.
 
 @item Precedenza
 L'ordine in cui le operazioni sono eseguite quando si usano degli operatori
