@@ -1,3 +1,8 @@
+2020-03-16         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawktexi.in: Updated.
+	* texinfo.tex: Updated.
+
 2020-03-10         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* gawktexi.in: Updated.
